--- a/01 HTML Y CSS/02 modelo de bloque/index.html
+++ b/01 HTML Y CSS/02 modelo de bloque/index.html
@@ -16,15 +16,26 @@
             Mi primera aplicacion
         </title>
     </head>
-    <body>
+
         <!-- 😁😁 aqui si va el contenido -->
-        <div>Este es contenido</div>
+        <div>Contenido del div</div>
         <!-- ⚡⚡ ETIQUETAS DE MODELO DE BLOQUE Y MODELO INLINE  ⚡⚡ -->
         <!-- 1️⃣ modelo de bloque-->
         <p>Lorem ipsum dolor sit amet.</p>
         <h3>Encabezado de nivel 3</h3>
-        <ul>
+        <!-- unorder list -->
+        <!-- order list -->
+        <ol>
             <li>Esta es una lista con viñetas</li>
-        </ul>
-    </body>
+        </ol>
+
+        <!-- 2️⃣ ETIQEUTAS MODELO INLINE -->
+        <div>
+            <span>Lorem ipsum dolor sit amet consectetur.</span>
+            <a href="direccion">Este es un link</a>
+            <span>este es un span con mas contenido y se va acomodar el texto segun el ancho sobrante del contenedor</span>
+            <strong>Este es un texto en negrita</strong>
+            <i>este texto es <strong>cursivo</strong></i>
+        </div>
+        
 </html>
