--- a/01 HTML Y CSS/04 demo/index.html
+++ b/01 HTML Y CSS/04 demo/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Oswald:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <nav>
-        <div>
+        <div class="contenedor">
             <img src="img/default-logo.png" alt="Logo">
             <ul>
                 <li>
@@ -35,5 +38,58 @@
             </ul>
         </div>
     </nav>
+    <header>
+        <div class="contenedor" id="contenedor">
+            <h1>
+                Building 
+                <br> 
+                a house?
+            </h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> 
+                Neque dignissimos dolorem ipsam, eos voluptas nam.
+            </p>
+            <form>
+                <input type="text" placeholder="Tu correo">
+                <button>submit</button>
+            </form>
+        </div>
+    </header>
+    <section>
+        <div class="contenedor">
+            <article>
+                <h2>01</h2>
+                <h3>Schematic Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, natus? Dolor, consequatur accusamus!</p>
+                <div>
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
+            </article>
+            <article>
+                <h2>02</h2>
+                <h3>Schematic Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, natus? Dolor, consequatur accusamus!</p>
+                <div>
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
+            </article>
+            <article>
+                <h2>03</h2>
+                <h3>Schematic Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, natus? Dolor, consequatur accusamus!</p>
+                <div>
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
+            </article>
+            <article>
+                <h2>04</h2>
+                <h3>Schematic Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, natus? Dolor, consequatur accusamus!</p>
+                <div>
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
+            </article>
+        </div>
+    </section>
 </body>
 </html>
