--- a/01 HTML Y CSS/04 demo/index.html
+++ b/01 HTML Y CSS/04 demo/index.html
@@ -57,35 +57,35 @@
     </header>
     <section>
         <div class="contenedor">
-            <article>
+            <article id="article1">
                 <h2>01</h2>
                 <h3>Schematic Design</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, natus? Dolor, consequatur accusamus!</p>
-                <div>
+                <div id="icono1">
                     <i class="fa-solid fa-chevron-right"></i>
                 </div>
             </article>
-            <article>
+            <article id="article2">
                 <h2>02</h2>
                 <h3>Schematic Design</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, natus? Dolor, consequatur accusamus!</p>
-                <div>
+                <div id="icono2">
                     <i class="fa-solid fa-chevron-right"></i>
                 </div>
             </article>
-            <article>
+            <article id="article3">
                 <h2>03</h2>
                 <h3>Schematic Design</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, natus? Dolor, consequatur accusamus!</p>
-                <div>
+                <div id="icono3">
                     <i class="fa-solid fa-chevron-right"></i>
                 </div>
             </article>
-            <article>
+            <article id="article4">
                 <h2>04</h2>
                 <h3>Schematic Design</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, natus? Dolor, consequatur accusamus!</p>
-                <div>
+                <div id="icono4">
                     <i class="fa-solid fa-chevron-right"></i>
                 </div>
             </article>
