--- a/01 HTML Y CSS/05 tienda/index.html
+++ b/01 HTML Y CSS/05 tienda/index.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Khula:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
     <title>Tienda</title>
 </head>
 <body>
-    <header>
-        hola
-    </header>
+    <nav class="nav">
+        <div class="nav__welcome">
+            <div class="nav__welcome__container">
+                <div class="nav__welcome__container--msj">
+                    Mensaje de saludo
+                </div>
+                <div class="nav__welcome__container__access">
+                    <a href="#" class="nav__welcome__container__access--account">
+                        <i class="fa-solid fa-user"></i> Mi Cuenta
+                    </a>
+                    <select class="nav__welcome__container__access--moneda">
+                        <option value="USD">USD $</option>
+                        <option value="PEN">PEN S/</option>
+                    </select>
+                    <select class="nav__welcome__container__access--idioma">
+                        <option value="us">English</option>
+                        <option value="es">Español</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
