--- a/01 HTML Y CSS/05 tienda/index.html
+++ b/01 HTML Y CSS/05 tienda/index.html
@@ -26,9 +26,48 @@
                         <option value="PEN">PEN S/</option>
                     </select>
                     <select class="nav__welcome__container__access--idioma">
-                        <option value="us">English</option>
-                        <option value="es">Español</option>
+                        <option value="us">     
+                            English
+                        </option>
+                        <option value="es">
+                            Español
+                        </option>
                     </select>
+                </div>
+            </div>
+        </div>
+        <div class="nav__menu">
+            <div class="nav__menu__container">
+                <img src="img/logo2.png" alt="logo" class="nav__menu__container--logo">
+                <div class="nav__menu__container__right">
+                    <ul class="nav__menu__container__right__box">
+                        <li class="nav__menu__container__right__box__item">
+                            <a href="#" class="nav__menu__container__right__box__item--link">home</a>
+                        </li>
+                        <li class="nav__menu__container__right__box__item">
+                            <a href="#" class="nav__menu__container__right__box__item--link">shop</a>
+                        </li>
+                        <li class="nav__menu__container__right__box__item">
+                            <a href="#" class="nav__menu__container__right__box__item--link">blog</a>
+                        </li>
+                        <li class="nav__menu__container__right__box__item">
+                            <a href="#" class="nav__menu__container__right__box__item--link">pages</a>
+                        </li>
+                        <li class="nav__menu__container__right__box__item">
+                            <a href="#" class="nav__menu__container__right__box__item--link">contact</a>
+                        </li>
+                        <li class="nav__menu__container__right__box__item">
+                            <a href="#" class="nav__menu__container__right__box__item--link">about us</a>
+                        </li>
+                    </ul>
+                    <a href="#" class="nav__menu__container__right__cart">
+                        <div class="nav__menu__container__right__cart__box">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <span>2</span>
+                        </div>
+                        <div class="nav__menu__container__right__cart--title">My Cart</div>
+                        <div class="nav__menu__container__right__cart--price">S/ 59.23</div>
+                    </a>
                 </div>
             </div>
         </div>
