--- a/01 HTML Y CSS/05 tienda/index.html
+++ b/01 HTML Y CSS/05 tienda/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="nav">
         <div class="nav__welcome">
-            <div class="nav__welcome__container">
+            <div class="nav__welcome__container container">
                 <div class="nav__welcome__container--msj">
                     Mensaje de saludo
                 </div>
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="nav__menu">
-            <div class="nav__menu__container">
+            <div class="nav__menu__container container">
                 <img src="img/logo2.png" alt="logo" class="nav__menu__container--logo">
                 <div class="nav__menu__container__right">
                     <ul class="nav__menu__container__right__box">
