--- a/01 HTML Y CSS/05 tienda/index.html
+++ b/01 HTML Y CSS/05 tienda/index.html
@@ -66,8 +66,31 @@
                             <span>2</span>
                         </div>
                         <div class="nav__menu__container__right__cart--title">My Cart</div>
-                        <div class="nav__menu__container__right__cart--price">S/ 59.23</div>
+                        <div class="nav__menu__container__right__cart--price">S/59.23</div>
                     </a>
+                </div>
+            </div>
+        </div>
+        <div class="nav__search">
+            <div class="nav__search__container container">
+                <div class="nav__search__container__category">
+                    <i class="fa-solid fa-bars-staggered"></i>
+                    <span>shop by categories</span>
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+                <div class="nav__search__container__formBox">
+                    <form>
+                        <input type="text" placeholder="Ingresa palabra clave...">
+                        <select name="" id="">
+                            <option value="">All Categories</option>
+                        </select>
+                        <i class="fa-solid fa-angle-down"></i>
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </form>
+                </div>
+                <div class="nav__search__container__phone">
+                    <i class="fa-solid fa-phone-volume"></i>
+                    <span>(080) 123 4567 890</span>
                 </div>
             </div>
         </div>
