--- a/01 HTML Y CSS/05 tienda/index.html
+++ b/01 HTML Y CSS/05 tienda/index.html
@@ -84,8 +84,8 @@
                         <select name="" id="">
                             <option value="">All Categories</option>
                         </select>
-                        <i class="fa-solid fa-angle-down"></i>
-                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="fa-solid fa-angle-down ml-1"></i>
+                        <i class="fa-solid fa-magnifying-glass ml-6"></i>
                     </form>
                 </div>
                 <div class="nav__search__container__phone">
@@ -95,5 +95,31 @@
             </div>
         </div>
     </nav>
+    <section class="portada">
+        <div class="portada__top">
+            <img src="img/portada1.jpg" alt="" class="portada__top--img">
+            <div class="portada__top__container container">
+                <div class="portada__top__container__box">
+                    <p class="portada__top__container__box--t1">
+                        premium ecommerce html template
+                    </p>
+                    <p class="portada__top__container__box--t2">
+                        hurry up!
+                    </p>
+                    <p class="portada__top__container__box--t3">
+                        2023 xail gear vr
+                    </p>
+                    <p class="portada__top__container__box--t4">
+                        Starting At $19.00
+                    </p>
+                    <a href="/compras.html" class="portada__top__container__box--btn">
+                        Shop Now
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="portada__bottom">
+        </div>
+    </section>
 </body>
 </html>
