--- a/01 HTML Y CSS/05 tienda/index.html
+++ b/01 HTML Y CSS/05 tienda/index.html
@@ -98,7 +98,7 @@
     <section class="portada">
         <div class="portada__top">
             <img src="img/portada1.jpg" alt="" class="portada__top--img">
-            <div class="portada__top__container container">
+            <div class="portada__top__container">
                 <div class="portada__top__container__box">
                     <p class="portada__top__container__box--t1">
                         premium ecommerce html template
@@ -119,6 +119,50 @@
             </div>
         </div>
         <div class="portada__bottom">
+            <img src="img/p1.jpg" alt="">
+            <img src="img/p2.jpg" alt="">
+            <img src="img/p3.jpg" alt="">
+            <img src="img/p4.jpg" alt="">
+        </div>
+    </section>
+    <section class="cards">
+        <div class="cards__container container">
+            <div class="cards__container__item">
+                <i class="fa-solid fa-truck"></i>
+                <span class="cards__container__item--titulo">
+                    Free Shipping
+                </span>
+                <span class="cards__container__item--descri">
+                    Free shipping on all UK orders
+                </span>
+            </div>
+            <div class="cards__container__item">
+                <i class="fa-solid fa-credit-card"></i>
+                <span class="cards__container__item--titulo">
+                    Free Shipping
+                </span>
+                <span class="cards__container__item--descri">
+                    Free shipping on all UK orders
+                </span>
+            </div>
+            <div class="cards__container__item">
+                <i class="fa-solid fa-calendar"></i>
+                <span class="cards__container__item--titulo">
+                    Free Shipping
+                </span>
+                <span class="cards__container__item--descri">
+                    Free shipping on all UK orders
+                </span>
+            </div>
+            <div class="cards__container__item">
+                <i class="fa-solid fa-asterisk"></i>
+                <span class="cards__container__item--titulo">
+                    Free Shipping
+                </span>
+                <span class="cards__container__item--descri">
+                    Free shipping on all UK orders
+                </span>
+            </div>
         </div>
     </section>
 </body>
