--- a/01 HTML Y CSS/05 tienda/index.html
+++ b/01 HTML Y CSS/05 tienda/index.html
@@ -165,5 +165,118 @@
             </div>
         </div>
     </section>
+    <section class="productos">
+        <div class="productos__container container">
+            <div class="productos__container__categorias">
+                <a href="#" class="productos__container__categorias--link active">
+                    new arrival
+                </a>
+                <a href="#" class="productos__container__categorias--link ml-5">bestseller</a>
+                <a href="#" class="productos__container__categorias--link ml-5">featured products</a>
+            </div>
+            <div class="productos__container__box">
+                <div class="productos__container__box__item">
+                    <div class="productos__container__box__item__top">
+                        <span>New</span>
+                        <span>-10%</span>
+                    </div>
+                    <img src="img/mando.jpg" alt="mando">
+                    <h2>Mando Xbox Gold</h2>
+                    <div class="productos__container__box__item__stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="productos__container__box__item__precio">
+                        <span class="productos__container__box__item__precio--real">$23.90</span>
+                        <span class="productos__container__box__item__precio--oferta">$21.50</span>
+                    </div>
+                    <a href="#" class="productos__container__box__item--btn">add to cart</a>
+                </div>
+                <div class="productos__container__box__item">
+                    <div class="productos__container__box__item__top">
+                        <span>New</span>
+                        <span>-10%</span>
+                    </div>
+                    <img src="img/mando.jpg" alt="mando">
+                    <h2>Mando Xbox Gold</h2>
+                    <div class="productos__container__box__item__stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="productos__container__box__item__precio">
+                        <span class="productos__container__box__item__precio--real">$23.90</span>
+                        <span class="productos__container__box__item__precio--oferta">$21.50</span>
+                    </div>
+                    <a href="#" class="productos__container__box__item--btn">add to cart</a>
+                </div>
+                <div class="productos__container__box__item">
+                    <div class="productos__container__box__item__top">
+                        <span>New</span>
+                        <span>-10%</span>
+                    </div>
+                    <img src="img/mando.jpg" alt="mando">
+                    <h2>Mando Xbox Gold</h2>
+                    <div class="productos__container__box__item__stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="productos__container__box__item__precio">
+                        <span class="productos__container__box__item__precio--real">$23.90</span>
+                        <span class="productos__container__box__item__precio--oferta">$21.50</span>
+                    </div>
+                    <a href="#" class="productos__container__box__item--btn">add to cart</a>
+                </div>
+                <div class="productos__container__box__item">
+                    <div class="productos__container__box__item__top">
+                        <span>New</span>
+                        <span>-10%</span>
+                    </div>
+                    <img src="img/mando.jpg" alt="mando">
+                    <h2>Mando Xbox Gold</h2>
+                    <div class="productos__container__box__item__stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="productos__container__box__item__precio">
+                        <span class="productos__container__box__item__precio--real">$23.90</span>
+                        <span class="productos__container__box__item__precio--oferta">$21.50</span>
+                    </div>
+                    <a href="#" class="productos__container__box__item--btn">add to cart</a>
+                </div>
+                <div class="productos__container__box__item">
+                    <div class="productos__container__box__item__top">
+                        <span>New</span>
+                        <span>-10%</span>
+                    </div>
+                    <img src="img/mando.jpg" alt="mando">
+                    <h2>Mando Xbox Gold</h2>
+                    <div class="productos__container__box__item__stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="productos__container__box__item__precio">
+                        <span class="productos__container__box__item__precio--real">$23.90</span>
+                        <span class="productos__container__box__item__precio--oferta">$21.50</span>
+                    </div>
+                    <a href="#" class="productos__container__box__item--btn">add to cart</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
