--- a/01 HTML Y CSS/05 tienda/index.html
+++ b/01 HTML Y CSS/05 tienda/index.html
@@ -39,6 +39,9 @@
         <div class="nav__menu">
             <div class="nav__menu__container container">
                 <img src="img/logo2.png" alt="logo" class="nav__menu__container--logo">
+                <a href="#" class="nav__menu__container--iconMenu">
+                    <i class="fa-solid fa-bars"></i>
+                </a>
                 <div class="nav__menu__container__right">
                     <ul class="nav__menu__container__right__box">
                         <li class="nav__menu__container__right__box__item">
