--- a/02 JAVASCRIPT/capitulo 02/index.html
+++ b/02 JAVASCRIPT/capitulo 02/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <!--  -->
-    
     <ul>
         <!--  -->
         <li>Compar leche</li>
@@ -24,7 +23,7 @@
         <p class="alerta"></p>
         <input type="text" class="tarea" placeholder="Agregar tarea...">
         <button>Agregar tarea</button>
-        <button>eliminar</button>
+        <!-- <button>eliminar</button> -->
     </div>
     <script src="codigo.js"></script>
 </body>
