--- a/02 JAVASCRIPT/capitulo 05/index.html
+++ b/02 JAVASCRIPT/capitulo 05/index.html
@@ -36,7 +36,73 @@
                         <span>ARTISTA</span>
                     </div>
                     <div class="section__right__contenido__resultado__discografia">
-                        
+                        <!-- <div class="section__right__contenido__resultado__discografia__item">
+                            <h3 class="section__right__contenido__resultado__discografia__item--titulo">Nevermind</h3>
+                            <div class="section__right__contenido__resultado__discografia__item__left">
+                                <img src="https://img.discogs.com/UoDAnoi3Cbp_JvOrz4CRgZBBSfg=/fit-in/600x592/filters:strip_icc():format(jpeg):mode_rgb():quality(90)/discogs-images/R-367084-1263095553.jpeg.jpg" alt="">
+                                <div class="section__right__contenido__resultado__discografia__item__left__info">
+                                    <p>Año: <span>1999</span></p>
+                                    <p>País: <span>USA</span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="section__right__contenido__resultado__discografia__item">
+                            <h3 class="section__right__contenido__resultado__discografia__item--titulo">Nevermind</h3>
+                            <div class="section__right__contenido__resultado__discografia__item__left">
+                                <img src="https://img.discogs.com/UoDAnoi3Cbp_JvOrz4CRgZBBSfg=/fit-in/600x592/filters:strip_icc():format(jpeg):mode_rgb():quality(90)/discogs-images/R-367084-1263095553.jpeg.jpg" alt="">
+                                <div class="section__right__contenido__resultado__discografia__item__left__info">
+                                    <p>Año: <span>1999</span></p>
+                                    <p>País: <span>USA</span></p>
+                                </div>
+                            </div>
+                            <div class="section__right__contenido__resultado__discografia__item__right">
+                                <ol>
+                                    <li>Lorem, ipsum.</li>
+                                    <li>Lorem, ipsum.</li>
+                                    <li>Lorem, ipsum.</li>
+                                    <li>Lorem, ipsum.</li>
+                                    <li>Lorem, ipsum.</li>
+                                </ol>
+                            </div>
+                        </div>
+                        <div class="section__right__contenido__resultado__discografia__item">
+                            <h3 class="section__right__contenido__resultado__discografia__item--titulo">Nevermind</h3>
+                            <div class="section__right__contenido__resultado__discografia__item__left">
+                                <img src="https://img.discogs.com/UoDAnoi3Cbp_JvOrz4CRgZBBSfg=/fit-in/600x592/filters:strip_icc():format(jpeg):mode_rgb():quality(90)/discogs-images/R-367084-1263095553.jpeg.jpg" alt="">
+                                <div class="section__right__contenido__resultado__discografia__item__left__info">
+                                    <p>Año: <span>1999</span></p>
+                                    <p>País: <span>USA</span></p>
+                                </div>
+                            </div>
+                            <div class="section__right__contenido__resultado__discografia__item__right">
+                                <ol>
+                                    <li>Lorem, ipsum.</li>
+                                    <li>Lorem, ipsum.</li>
+                                    <li>Lorem, ipsum.</li>
+                                    <li>Lorem, ipsum.</li>
+                                    <li>Lorem, ipsum.</li>
+                                </ol>
+                            </div>
+                        </div>
+                        <div class="section__right__contenido__resultado__discografia__item">
+                            <h3 class="section__right__contenido__resultado__discografia__item--titulo">Nevermind</h3>
+                            <div class="section__right__contenido__resultado__discografia__item__left">
+                                <img src="https://img.discogs.com/UoDAnoi3Cbp_JvOrz4CRgZBBSfg=/fit-in/600x592/filters:strip_icc():format(jpeg):mode_rgb():quality(90)/discogs-images/R-367084-1263095553.jpeg.jpg" alt="">
+                                <div class="section__right__contenido__resultado__discografia__item__left__info">
+                                    <p>Año: <span>1999</span></p>
+                                    <p>País: <span>USA</span></p>
+                                </div>
+                            </div>
+                            <div class="section__right__contenido__resultado__discografia__item__right">
+                                <ol>
+                                    <li>Lorem, ipsum.</li>
+                                    <li>Lorem, ipsum.</li>
+                                    <li>Lorem, ipsum.</li>
+                                    <li>Lorem, ipsum.</li>
+                                    <li>Lorem, ipsum.</li>
+                                </ol>
+                            </div>
+                        </div> -->
                     </div>
                     
                 </div>
